# Raptor_Tools

./: .gitignore  .gitmodules  README.md
Create_Raptor_Artifact/: CMakeLists.txt  README.md  create_release.sh  deploy-qt-windows.cmake  deploy-qt-windows.cmake.in  encrypt_devic.cmake  external_libs.tar.gz.REMOVED.git-id  install.sh_backup
Create_Raptor_Artifact/Encryption_method/: Decryption_method  Encryption_method  README.md  encrypt  public_key
Create_Raptor_Artifact/Encryption_method/src/: Makefile  abc.txt  aes.cpp  function.h  obfuscate.h  openssl_rsa.cpp  openssl_rsa.h
Create_Raptor_Artifact/makeself-2.4.0/: makeself-header.sh
Create_Raptor_Artifact/os_dep_install_scripts/: centos_os_dep.sh  changer_mod.sh  ubuntu_os_dep.sh  unix_dep.sh
Create_Raptor_Artifact/qt_installer_config/: config.xml  script.qs  style.qss
Device_Modeling/src/: CMakeLists.txt  Makefile
Device_Modeling/src/configuration/: rs_parameter.h  rs_parameter_type.h
Device_Modeling/src/device_spec/: device.h  device_block.h  device_instance.h  device_net.h  device_port.h  device_signal.h
Flex_LM/: CMakeLists.txt  License_manager.cpp  License_manager.hpp
HDL_simulator/: CMakeLists.txt  Makefile  setup_sim
OpenLM/: CMakeLists.txt  License_manager.cpp  License_manager.hpp  dummy.xml  features.txt  licensing_feature.py
OpenLM/cmake/: Findlicensecc.cmake
OpenLM/lib64/: libssl.so.3
OpenLM/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
OpenLM/opensslpkgConfig/pkgconfig/: libcrypto.pc  openssl.pc
OpenLM/projects/Raptor/: finalize.lic  private_key.rsa
OpenLM/src/: License_manager.cpp  License_manager.hpp  example.cpp
encryption/: CMakeLists.txt  Makefile  README.md
encryption/example_library/: Verific_pragmas_public  enc.v
encryption/examples/: RS_Key  embedded_key.v  full_adder.v  vcs_embedded_key.v  vcs_pragmas_public
encryption/src/: main.cpp  rs_encrypt
encryption/src/enc_verilog/: enc_ver.cpp  enc_ver.h  ieee_1735.cpp  ieee_1735.h
encryption/vcs_enc/: CMakeLists.txt
encryption/vcs_enc/example_library/: embedded_key.v  full_adder.v
encryption/vcs_enc/src/: main.cpp
encryption/vcs_enc/src/enc_verilog/: enc_ver.cpp  enc_ver.h  ieee_1735.cpp
gatelevel_readers/compare_ports/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compare_info  main.cpp  read_json.tcl  run.sh
gatelevel_readers/compare_ports/analyze/Trivium_Module/: hier_info.json
gatelevel_readers/compare_ports/src/: compare_ports.cpp  compare_ports.h  compare_ports.i  compare_ports.py  compare_ports_wrap.cpp
gatelevel_readers/compare_ports/testcases/testcase1/: and2VErilog1_post_synth_ports.json  port_info.json
gatelevel_readers/pin_map/: CMakeLists.txt  README.md  dump_tcl.sh  run.sh
gatelevel_readers/pin_map/Test_cases/primitive_example_design_1/: clk_constraint.sdc  interface.json  raptor_run.sh
gatelevel_readers/pin_map/Test_cases/primitive_example_design_2/: interface.json  post_synth_ports.json
gatelevel_readers/pin_map/Test_cases/primitive_example_design_4/: post_synth_ports.json
gatelevel_readers/pin_map/Test_cases/primitive_example_design_5/: post_synth_ports.json  raptor_run.sh  raptor_tcl.tcl
gatelevel_readers/pin_map/Test_cases/serdes/: interface.json  serdes.pin
gatelevel_readers/pin_map/src/: main.cpp
gatelevel_readers/pin_map/src/dump_tcl/: dump_tcl.cpp  dump_tcl.h  dump_tcl.i  main.cpp
gatelevel_readers/pin_map/src/pin_map/: pin_map.cpp  pin_map.h
gatelevel_readers/read_edif/: CMakeLists.txt  Makefile  result.blif
gatelevel_readers/read_edif/src/: cells_sep.cpp  cells_sep.hpp  edif2blif_netlist.h  edif_blif.cpp  edif_blif.h  edif_blif.hpp  edif_parsing.cpp  edif_parsing.hpp  main.cpp  pprint.cpp  pprint.hpp
gatelevel_readers/read_edif/src/cpp_files/: data.cpp  data.h  edif_blif.h  read_edif.cpp  read_edif.h  simple_netlist.h  simple_netlist_beta.h
gatelevel_readers/read_edif/test/: alu4_output_edif.edn  and.edn  main.cpp
gatelevel_readers/read_verilog/: CMakeLists.txt  README.md  install_dependencies.sh
gatelevel_readers/read_verilog/src/: main.cpp
gatelevel_readers/read_verilog/src/read_nl/: generate_simple_netlist.cpp  ieee_1735.cpp  ieee_1735.h  simple_netlist.h  utilities.h
gatelevel_readers/read_verilog/tescases/: Vexrisc_full.txt  and2_or2.txt  i2c.txt
gatelevel_readers/read_verilog/testcases/: adder_128.txt  adder_64.txt  and2.txt  and2_latch.txt
gatelevel_readers/reconstruct_verilog/: CMakeLists.txt  run.sh
gatelevel_readers/reconstruct_verilog/src/: reconstruct_dsp19.h  reconstruct_dsp38.h  reconstruct_ram18kx2.h  reconstruct_ram36k.h  reconstruct_utils.h  reconstruct_verilog.cpp  reconstruct_verilog.h  transform_blif.h
gatelevel_readers/transform_eblif/: CMakeLists.txt  run.sh
gatelevel_readers/transform_eblif/src/: transform_blif.cpp  transform_blif.h
gatelevel_readers/veri_prune/gen_map/: CMakeLists.txt
gatelevel_readers/veri_prune/pin_map/: CMakeLists.txt  README.md  run.sh
gatelevel_readers/verify_synth_ports/: CMakeLists.txt  main.cpp
gatelevel_readers/verify_synth_ports/src/: compare_ports.cpp  compare_ports.h
graph_partition/: CMakeLists.txt  Makefile  download_boost.cmake  download_tbb_linux.cmake  libtatutum.cmake
ieee_1735/: CMakeLists.txt  README.md
ieee_1735/example_library/: embedded_key.v
ieee_1735/src/: ieee1735_encrypt_verilog.cpp  ieee_1735.cpp
netlist_bitblast/: CMakeLists.txt  Makefile
netlist_bitblast/src/: BitBlaster.cpp  BitBlaster.h  NetlistPrettyPrinter.cpp  NetlistPrettyPrinter.h  SDFEditor.cpp  SDFEditor.h  Utils.cpp  Utils.h  main.cpp
netlist_bitblast/tests/dsp/: fabric_GJC4_post_route.sdf  fabric_GJC4_post_route.v
netlist_bitblast/tests/gen_clk/: fabric_dut_post_route.sdf  fabric_dut_post_route.v
netlist_bitblast/tests/rom/: fabric_SBox_post_route.sdf  fabric_SBox_post_route.v
parser_plugins/: CMakeLists.txt  Makefile
parser_plugins/include/: CMakeLists.txt  makefile  synlig_simplify.cc
python_tools/: CMakeLists.txt  Makefile  README.md  gen_venv.sh  requirements.txt
surelog_sv_plugin/: CMakeLists.txt  Makefile
(+782 files in other folders)
